2009-05-28  Esteban Sanchez  <estebans@artica.es>

	* include/functions_db.php: Return -1 on get_agent_status() on case
	the agent last contact has exceed the agent interval.

	* include/functions_visual_map.php: Call get_agent_status() when
	an element is to monitor a whole agent. Fixes #2761712

2009-05-28  Esteban Sanchez  <estebans@artica.es>

	* install.php: Use server address if the db host is not localhost.
	Fixes #2796790.

	* include/functions_agents.php: Fixed an array cast on
	get_agent_alerts_compound().

	* include/functions_events.php: Critical and warning colors where
	swapped on print_events_table().

	* include/functions_reporting.php: Fixed alerts count on
	get_group_stats() and count combined alerts too. Fixes #2791577

	* operation/agentes/tactical.php: Style corrections.

2009-05-27  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* godmode/agentes/configurar_agente.php: Should fix bug #2785154. Wasn't
	clear on how to duplicate but from what I understand this should fix it.

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/configurar_agente.php: Style correction.

	* operation/snmpconsole/snmp_view.php: Fixed creation link when
	the agent is not found by address. Fixes #2777409

	* godmode/agentes/agent_manager.php: Use address as name on creation
	when it's given.

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* general/header.php: Added code to ignored parameters. Fixes #2779381

	* include/functions_ui.php: Ignore form operations on get_url_refresh()

2009-05-27  Esteban Sanchez  <estebans@artica.es>

	* godmode/agentes/configurar_agente.php: Use pandora functions to
	create and update modules. Some fixes when these operations could
	not be done so the editor appears again. Fixes #2762316

	* godmode/agentes/module_manager_editor.php: Some patches to work
	better with configurar_agente.php

	* include/functions_modules.php: Avoid setting an empty name on
	update_agent_module()
